Updated GW observations.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -101,36 +101,49 @@ Below, we summarise the existing observations of merging binary black holes and 
 
 During its first science run, lasting from September of 2015 through January of 2016, the LIGO detector network observed three likely signals from the mergers of binary black holes.  GW150914 \citep{GW150914} and GW151226 \citep{GW151226} were confident, $> 5\sigma$ observations; LVT151012 was estimated as having a $\sim 90\%$ probability of being a gravitational-wave signal \citep{GW150914:rates,BBH:O1}, though the estimate is conservative and we shall treat it as a detection here.  During the second science run, lasting with some interruptions from November 2016 through August 2017, three further confident binary black hole detections have been announced: GW170104 \citep{GW170104},  GW170608 \citep{GW170608}, and GW170814 \citep{GW170814}, the last of them with the participation of the Virgo gravitational-wave observatory.   The observation of gravitational waves from the binary neutron star merger GW170817 \citep{GW170817} was followed up by an unprecedented campaign of electromagnetic observations, leading to detections of a short gamma ray burst, optical kilonova, and an afterglow spanning from radio through X-ray wavelengths \citep{GW170817:GRB,GW170817:MMA}.  We shall focus on binary black holes here.
 
+The gravitational-wave signature of a merging binary encodes the properties of the binary: the component masses and spins. Coupled with information from two or more detectors in a network, this makes it possible to infer the sky location and orientation of the source and the distance to the source \citep{Veitch:2015,GW150914:PE}.  However, some of the source parameters are strongly correlated, leading to near-degeneracies when attempting to extract them from a noisy data set.   For the heaviest black hole binaries such as GW150914, the total mass $M \equiv M_1 + M_2$ is measured relatively accurately as the ringdown, whose frequency is a function of the total mass, falls in the sensitive frequency band of the gravitational-wave detectors.  For most black holes, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter, since it determines to lowest order the rate of the frequency evolution during the inspiral phase.  The mass ratio $q\equiv M_2/M_1 \leq 1$ is often quite poorly constrained, because it enters the inspiral phasing at a higher order in the ratio of the orbital velocity to the speed of light and is partially degenerate with the black hole spins \citep[e.g.,][]{PoissonWill:1993}.  While all binary black holes observed today are consistent with having equal-mass components, mass ratios could be as extreme as $4:1$ in some cases.  We list the parameters of the black holes observed to date in table \ref{table:BHmasses}.
 
-The gravitational-wave signature of a merging binary encodes the properties of the binary: the component masses and spins. Coupled with information from two or more detectors in a network, this makes it possible to infer the sky location and orientation of the source and the distance to the source \citep{Veitch:2015,GW150914:PE}.  However, some of the source parameters are strongly correlated, leading to near-degeneracies when attempting to extract them from a noisy data set.  
+ 
+\begin{table}
+\begin{tabular}{lcccccc}
+Event  & $M_c$ [$M_\odot$]  & q & $M_1$ [$M_\odot$]  & $M_2$ [$M_\odot$]  & $\chi_\textrm{eff}$ & $d_L$ [Mpc] \\
+\hline
+GW150914\footnote{\citet{BBH:O1}} & $28.1^{+1.8}_{-1.5}$ & $0.81^{+0.17}_{-0.2}$ & $36.2^{+5.2}_{-3.8}$ & $29.1^{+3.7}_{-4.4}$ & $-0.06^{+0.14}_{-0.14}$ & $420^{+150}_{-180}$\\
+LVT151012\footnote{\citet{BBH:O1}} & $15.1^{+1.4}_{-1.1}$ &$0.57^{+0.38}_{-0.37}$ &$23^{+18}_{-6}$ &$13^{+4}_{-5}$ &$0.03^{+0.31}_{-0.20}$ &$1020^{+500}_{-490}$\\
+GW151226\footnote{\citet{BBH:O1}} & $8.88^{+0.33}_{-0.28}$ &$0.52^{+0.40}_{-0.29}$ &$14.2^{+8.3}_{-3.7}$ &$7.5^{+2.3}_{-2.3}$ &$0.21^{+0.20}_{-0.10}$ &$440^{+180}_{-190}$ \\
+GW170104\footnote{\citet{GW170104}} & $25.1^{+2.5}_{-3.9}$ &$0.62^{+0.32}_{-0.26}$ &$31.2^{+8.4}_{-6.0}$ &$19.4^{+5.3}_{-5.9}$ &$-0.12^{+0.21}_{-0.30}$ &$880^{+450}_{-390}$\\
+GW170608\footnote{\citet{GW170608}} & $7.9^{+0.2}_{-0.2}$ &$0.6^{+0.3}_{-0.4}$ &$12^{+7}_{-2}$ &$7^{+2}_{-2}$ &$0.07^{+0.23}_{-0.09}$ &$340^{+140}_{-140}$ \\
+GW170814\footnote{\citet{GW170814}} & $24.1^{+1.4}_{-1.1}$ & &$30.5^{+5.7}_{-3.0}$ &$25.3^{+2.8}_{-4.2}$ &$0.06^{+0.12}_{-0.12}$ & $540^{+130}_{-210}$ \\
+\hline
+\end{tabular}
+\caption{The inferred parameters of the merging binary black holes.  The median value and the 90\% credible interval bounds are given.}\label{table:BHmasses}
+\end{table}
 
-GW150914 has the heaviest black holes, allowing the total mass $M \equiv M_1 + M_2$ to be particularly well measured as the merger and ringdown fall in the sensitive frequency band of the detectors: $65 \pm 4\, M_\odot$ in the source frame.  For the other two events with lighter black holes, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter; $M_c = 15 \pm 1\, M_\odot$ for LVT151012 and  $M_c = 8.9 \pm 0.3\, M_\odot$ for GW151226.  The mass ratio is relatively well constrained toward equal masses for GW150914, providing confidence that both components weigh in within a few solar masses of $30\, M_\odot$.  On the other hand, while LVT151012 and GW151226 may be signals from mergers of nearly equal-mass $\sim 17\, M_\odot$ and $\sim 10\, M_\odot$ black holes, respectively, the black hole masses could also be very unequal for these events, as the mass ratios could be as extreme as $4:1$ and $3:1$, respectively. 
-[All uncertainties correspond to 90\% credible intervals or limits, following \citet{BBH:O1}.]
 
-\todo {Add newest detections.  Table?  Better yet, figure, including XRBs and uncertainties?}
+%GW150914 has the heaviest black holes, allowing the total mass $M \equiv M_1 + M_2$ to be particularly well measured as the merger and ringdown fall in the sensitive frequency band of the detectors: $65 \pm 4\, M_\odot$ in the source frame.  For the other two events with lighter black holes, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter; $M_c = 15 \pm 1\, M_\odot$ for LVT151012 and  $M_c = 8.9 \pm 0.3\, M_\odot$ for GW151226.  The mass ratio is relatively well constrained toward equal masses for GW150914, providing confidence that both components weigh in within a few solar masses of $30\, M_\odot$.  On the other hand, while LVT151012 and GW151226 may be signals from mergers of nearly equal-mass $\sim 17\, M_\odot$ and $\sim 10\, M_\odot$ black holes, respectively, the black hole masses could also be very unequal for these events, as the mass ratios could be as extreme as $4:1$ and $3:1$, respectively. 
 
-\begin{figure}
-	\centering
-	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
-	\includegraphics[width=0.99\textwidth]{Graveyard-linear.png}%{BHmass.png}
-	\caption{\label{fig:BHmasses} \todo{Placeholder for future figure showing the masses of black holes observed as gravitational-wave sources and XRBs, with error bars computed from partially available LIGO posteriors and from \citep{Farr:2011}.  Cite in text.} Figure courtesy of Frank Elavsky, Northwestern University.}
-\end{figure}
+%\todo {Add newest detections.  Table?  Better yet, figure, including XRBs and uncertainties?}
 
-Individual black hole spins are difficult to measure precisely with gravitational waves.  However, we do know that none of the observed binaries could have large spins aligned with the orbital angular momentum; in fact the averaged dimensionless spin in the direction of the orbital angular momentum is below $0.4$ for all three events, and consistent with zero for GW150914 and LVT151012.  Interestingly, it is not consistent with zero for GW151226, the lightest binary black hole detected, indicating that at least one of the components for that event must have been a rotating Kerr black hole.  Spin projections in the orbital plane are very poorly constrained for all three events.
+Individual black hole spins are difficult to measure precisely with gravitational waves.  However, we do know that none of the observed binaries could have large spins aligned with the orbital angular momentum; in fact the averaged dimensionless spin along the direction of the orbital angular momentum $\chi_\textrm{eff}$ is below $0.4$ for all observed events, and consistent with zero for all but one of them.  Interestingly, it is not consistent with zero for GW151226, the second lightest binary black hole detected, indicating that at least one of the components for that event must have been a rotating Kerr black hole.  Spin projections in the orbital plane are very poorly constrained for all events.
 
-All signals came from distances of around 500 Mpc to 1 Gpc (redshifts $z\sim 0.1$ -- $0.2$).  With just two operational detectors, LIGO Hanford and LIGO Livingston, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky, making associations with specific host galaxies impossible.
+All signals came from distances of around 500 Mpc to 1 Gpc (redshifts $z\sim 0.1$ -- $0.2$).  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170608 reduced the sky region to only 60 deg$^2$.  Nonetheless, associations with specific host galaxies are impossible for all binary black hole mergers.  
 
 Sensitivity to gravitational waves from binary mergers depends on the object mass; the horizon distance at which a source is detectable scales as $M_c^{5/6}$ for inspiral-dominated signals, so the surveyed volume scales as $M_c^{2.5}$.  While three observations are not sufficient to determine the mass distribution of merging binary black holes, the observed broad mass distribution, deconvolved with the mass-dependent selection effects, could be consistent with an intrinsic mass distribution of $M^{-2.5}$, reminiscent of the stellar initial mass function \citep{Salpeter:1955}.  The uncertainty in the mass distribution is relayed into the uncertainty on inferred merger rates; these later are consistent with a broad range spanning $\sim 10$ -- $200$ Gpc$^{-3}$ yr$^{-1}$.  
 
-All three LIGO signals are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR,BBH:O1}.
-
-\todo{Add plots from O1 paper?  Probably not -- see above for figure idea.}
+All LIGO signals observed to date are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR}.
 
 \subsection{Other observations}
 
 There is a range of electromagnetic observations that shed light on various intermediate stages of compact object binary formation and evolution preceding merger.  These range from initial mass and period distributions of massive stellar binaries \citep[e.g.,][]{Sana:2012} and luminous red novae, which may be associated with common envelope events \citep{Ivanova:2013LRN} to supernovae, X-ray binaries including Be X-ray binaries and ultra-luminous X-ray binaries, Galactic binary radio pulsars, and gamma ray bursts.  Here, we focus on observations of X-ray binaries containing a black hole accreting mass from a companion, either through wind-driven mass loss and Bondi-Hoyle accretion (high-mass X-ray binaries) or Roche lobe overflow from a companion that has expanded beyond the $L_1$ Lagrange point  (low-mass X-ray binaries).   
 
 Black-hole X-ray binaries provide the most direct connection to merging binary black holes.  Such binaries with dynamical mass measurements provide the only other secure measurements of black holes masses in addition to the gravitational-wave observations described above.  \citet{Ozel:2010} and \citet{Farr:2011} summarize the mass distribution of black-hole X-ray binaries; they find a distribution which ranges from 4 or 5 solar masses on the low-mass end (with a possible mass gap between neutron star and black hole masses) to $\sim 15\, M_\odot$ or more on the high mass end.  However, given the doubts subsequently placed on the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015}, there are no known black holes with dynamically confirmed masses guaranteed to exceed $15\, M_\odot$.
+
+\begin{figure}
+	\centering
+	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
+	\includegraphics[width=0.99\textwidth]{Graveyard-linear.png}%{BHmass.png}
+	\caption{\label{fig:BHmasses}  The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources (blue), as well as masses of black holes in X-ray binaries (purple).  Galactic neutron stars observed as radio pulsars (yellow) and the merging double neutron star GW170817 (orange) appear at the bottom of the figure.  Placement on the horizontal axis is arbitrary.  Error bars are indicative of the measurement uncertainty.  Figure courtesy of Frank Elavsky, Northwestern University and LIGO-Virgo collaborations.}
+\end{figure}
 
 \todo{Add GC X-ray binary observations, IMBH discussion} 
 
