No more red comments in section 2.

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -19560,6 +19560,42 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{BasakZdziarski:2016,
+   author = {{Basak}, R. and {Zdziarski}, A.~A.},
+    title = "{Spectral analysis of the XMM-Newton data of GX 339-4 in the low/hard state: disc truncation and reflection}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1512.01833},
+ primaryClass = "astro-ph.HE",
+ keywords = {accretion, accretion discs, black hole physics, stars: individual: GX 339-4, X-rays: binaries, X-rays: stars},
+     year = 2016,
+    month = may,
+   volume = 458,
+    pages = {2199-2214},
+      doi = {10.1093/mnras/stw420},
+   adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.458.2199B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Basak:2017,
+   author = {{Basak}, R. and {Zdziarski}, A.~A. and {Parker}, M. and {Islam}, N.
+	},
+    title = "{Analysis of NuSTAR and Suzaku observations of Cyg X-1 in the hard state: evidence for a truncated disc geometry}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1705.06638},
+ primaryClass = "astro-ph.HE",
+ keywords = {accretion, accretion discs, black hole physics, stars: individual: Cyg X-1, X-rays: binaries, X-rays: individual: Cyg X-1, stars: individual: Cyg X-1 - X-rays: binaries},
+     year = 2017,
+    month = dec,
+   volume = 472,
+    pages = {4220-4232},
+      doi = {10.1093/mnras/stx2283},
+   adsurl = {http://adsabs.harvard.edu/abs/2017MNRAS.472.4220B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Farr:2018,
    author = {{Farr}, B. and {Holz}, D.~E. and {Farr}, W.~M.},
     title = "{Using Spin to Understand the Formation of LIGO and Virgo{\rsquo}s Black Holes}",
@@ -19973,4 +20009,17 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
+@ARTICLE{PaczynskiRhoads:1993,
+   author = {{Paczynski}, B. and {Rhoads}, J.~E.},
+    title = "{Radio Transients from Gamma-Ray Bursters}",
+  journal = {\apjl},
+   eprint = {astro-ph/9307024},
+ keywords = {COSMOLOGY: THEORY, GAMMA RAYS: BURSTS, RADIO CONTINUUM: GENERAL, RELATIVITY},
+     year = 1993,
+    month = nov,
+   volume = 418,
+    pages = {L5},
+      doi = {10.1086/187102},
+   adsurl = {http://adsabs.harvard.edu/abs/1993ApJ...418L...5P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
