--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -101,7 +101,7 @@ Below, we summarise the existing observations of merging binary black holes and 
 
 During its first science run, lasting from September of 2015 through January of 2016, the LIGO detector network observed three likely signals from the mergers of binary black holes.  GW150914 \citep{GW150914} and GW151226 \citep{GW151226} were confident, $> 5\sigma$ observations; LVT151012 was estimated as having a $\sim 90\%$ probability of being a gravitational-wave signal \citep{GW150914:rates,BBH:O1}, though the estimate is conservative and we shall treat it as a detection here.  During the second science run, lasting with some interruptions from November 2016 through August 2017, three further confident binary black hole detections have been announced: GW170104 \citep{GW170104},  GW170608 \citep{GW170608}, and GW170814 \citep{GW170814}, the last of them with the participation of the Virgo gravitational-wave observatory.   The observation of gravitational waves from the binary neutron star merger GW170817 \citep{GW170817} was followed up by an unprecedented campaign of electromagnetic observations, leading to detections of a short gamma ray burst, optical kilonova, and an afterglow spanning from radio through X-ray wavelengths \citep{GW170817:GRB,GW170817:MMA}.  We shall focus on binary black holes here.
 
-The gravitational-wave signature of a merging binary encodes the properties of the binary: the component masses and spins. Coupled with information from two or more detectors in a network, this makes it possible to infer the sky location and orientation of the source and the distance to the source \citep{Veitch:2015,GW150914:PE}.  However, some of the source parameters are strongly correlated, leading to near-degeneracies when attempting to extract them from a noisy data set.   For the heaviest black hole binaries such as GW150914, the total mass $M \equiv M_1 + M_2$ is measured relatively accurately as the ringdown, whose frequency is a function of the total mass, falls in the sensitive frequency band of the gravitational-wave detectors.  For most black holes, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter, since it determines to lowest order the rate of the frequency evolution during the inspiral phase.  The mass ratio $q\equiv M_2/M_1 \leq 1$ is often quite poorly constrained, because it enters the inspiral phasing at a higher order in the ratio of the orbital velocity to the speed of light and is partially degenerate with the black hole spins \citep[e.g.,][]{PoissonWill:1993}.  While all binary black holes observed today are consistent with having equal-mass components, mass ratios could be as extreme as $4:1$ in some cases.  We list the parameters of the black holes observed to date in table \ref{table:BHmasses}.
+The gravitational-wave signature of a merging binary encodes the properties of the binary: the component masses and spins. Coupled with information from two or more detectors in a network, this makes it possible to infer the sky location and orientation of the source and the distance to the source \citep{Veitch:2015,GW150914:PE}.  However, some of the source parameters are strongly correlated, leading to near-degeneracies when attempting to extract them from a noisy data set.   For the heaviest black hole binaries such as GW150914, the total mass $M \equiv M_1 + M_2$ is measured relatively accurately as the ringdown, whose frequency is a function of the total mass, falls in the sensitive frequency band of the gravitational-wave detectors.  For most black holes, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter, since it determines to lowest order the rate of the frequency evolution during the inspiral phase.  The mass ratio $q\equiv M_2/M_1 \leq 1$ is often quite poorly constrained, because it enters the inspiral phasing at a higher order in the ratio of the orbital velocity to the speed of light and is partially degenerate with the black hole spins \citep[e.g.,][]{PoissonWill:1995}.  While all binary black holes observed today are consistent with having equal-mass components, mass ratios could be as extreme as $4:1$ in some cases.  We list the parameters of the black holes observed to date in table \ref{table:BHmasses}.
 
  
 \begin{table}
@@ -136,7 +136,8 @@ All LIGO signals observed to date are consistent with gravitational waves expect
 
 There is a range of electromagnetic observations that shed light on various intermediate stages of compact object binary formation and evolution preceding merger.  These range from initial mass and period distributions of massive stellar binaries \citep[e.g.,][]{Sana:2012} and luminous red novae, which may be associated with common envelope events \citep{Ivanova:2013LRN} to supernovae, X-ray binaries including Be X-ray binaries and ultra-luminous X-ray binaries, Galactic binary radio pulsars, and gamma ray bursts.  Here, we focus on observations of X-ray binaries containing a black hole accreting mass from a companion, either through wind-driven mass loss and Bondi-Hoyle accretion (high-mass X-ray binaries) or Roche lobe overflow from a companion that has expanded beyond the $L_1$ Lagrange point  (low-mass X-ray binaries).   
 
-Black-hole X-ray binaries provide the most direct connection to merging binary black holes.  Such binaries with dynamical mass measurements provide the only other secure measurements of black holes masses in addition to the gravitational-wave observations described above.  \citet{Ozel:2010} and \citet{Farr:2011} summarize the mass distribution of black-hole X-ray binaries; they find a distribution which ranges from 4 or 5 solar masses on the low-mass end (with a possible mass gap between neutron star and black hole masses) to $\sim 15\, M_\odot$ or more on the high mass end.  However, given the doubts subsequently placed on the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015}, there are no known black holes with dynamically confirmed masses guaranteed to exceed $15\, M_\odot$.
+Black-hole X-ray binaries provide the most direct connection to merging binary black holes.  In fact, some of the observed high-mass X-ray binaries may ultimately produce gravitational-wave sources \citep{CygnusX3:2012}.  Black-hole X-ray binaries with dynamical mass measurements provide the only other secure measurements of black holes masses in addition to the gravitational-wave observations described above.  \citet{Ozel:2010} and \citet{Farr:2011} summarize the mass distribution of black-hole X-ray binaries; they find a distribution which ranges from 4 or 5 solar masses on the low-mass end (with a possible mass gap between neutron star and black hole masses) to $\sim 15\, M_\odot$ or more on the high mass end.  However, given the doubts subsequently placed on the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015}, there are no known black holes with dynamically confirmed masses guaranteed to exceed $15\, M_\odot$.  The masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses} along with the masses of gravitational-wave sources.  This figure does not include speculative but potentially very exciting intermediate-mass black holes \citep{MillerColbert:2004,Pasham:2014}; if such few-hundred solar-mass black holes generically exist in globular clusters, they will be detectable as gravitational-wave sources \citep[e.g.,][]{Mandel:2008}.
+%\todo{Add GC X-ray binary observations} 
 
 \begin{figure}
 	\centering
@@ -145,20 +146,14 @@ Black-hole X-ray binaries provide the most direct connection to merging binary b
 	\caption{\label{fig:BHmasses}  The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources (blue), as well as masses of black holes in X-ray binaries (purple).  Galactic neutron stars observed as radio pulsars (yellow) and the merging double neutron star GW170817 (orange) appear at the bottom of the figure.  Placement on the horizontal axis is arbitrary.  Error bars are indicative of the measurement uncertainty.  Figure courtesy of Frank Elavsky, Northwestern University and LIGO-Virgo collaborations.}
 \end{figure}
 
-\todo{Add GC X-ray binary observations, IMBH discussion} 
 
 Black hole X-ray binaries also provide an opportunity for measuring black hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, assumed to correspond to the radius of the innermost stable circular orbit, which is a sensitive function of black hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the models can suffer from significant systematics.  For example, for 2 of 6 systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$.  However, for the remaining 3 systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
 
-Most relevantly, these high-spin observations include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  Moreover, such high-mass X-ray binaries may be direct progenitors of merging binary black holes \citep{Bulik:2008,CygnusX3:2012}; in fact, isolated binaries that form binary black holes must go through this phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, at least some stellar-mass black holes in systems similar to those that could go on to become merging black holes should have high spins; however, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the LIGO-observed binary black holes \citep{HotokezakaPiran:2017}.  \todo{Add Chris Done's concerns}
+Most relevantly, these high-spin observations include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  %Moreover, such high-mass X-ray binaries may be direct progenitors of merging binary black holes \citep{Bulik:2008,CygnusX3:2012}; in fact, 
+Isolated binaries that form binary black holes must go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, at least some stellar-mass black holes in systems similar to those that could go on to become merging black holes should have high spins; however, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the LIGO-observed binary black holes \citep{HotokezakaPiran:2017}.  Moreover, the spin magnitude measurements could be very sensitive to the modelling assumptions, and the systematic errors may dominated the claimed statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}.
 
 We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the micro
 quasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in massive binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for realignment during binary evolution, as described below.
-
-
-%EM counterparts, Fermi 
-
-
-\todo{Sources en route to forming compact binaries (e.g., WR-BH X-ray binaries) }
 
 \section{Formation scenarios}\label{form}
 
