--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -109,8 +109,8 @@ The gravitational-wave signature of a merging binary encodes the properties of t
 Event  & $M_c$ [$M_\odot$]  & q & $M_1$ [$M_\odot$]  & $M_2$ [$M_\odot$]  & $\chi_\textrm{eff}$ & $d_L$ [Mpc] \\
 \hline
 GW150914\footnote{\citet{BBH:O1}} & $28.1^{+1.8}_{-1.5}$ & $0.81^{+0.17}_{-0.2}$ & $36.2^{+5.2}_{-3.8}$ & $29.1^{+3.7}_{-4.4}$ & $-0.06^{+0.14}_{-0.14}$ & $420^{+150}_{-180}$\\
-LVT151012\footnote{\citet{BBH:O1}} & $15.1^{+1.4}_{-1.1}$ &$0.57^{+0.38}_{-0.37}$ &$23^{+18}_{-6}$ &$13^{+4}_{-5}$ &$0.03^{+0.31}_{-0.20}$ &$1020^{+500}_{-490}$\\
-GW151226\footnote{\citet{BBH:O1}} & $8.88^{+0.33}_{-0.28}$ &$0.52^{+0.40}_{-0.29}$ &$14.2^{+8.3}_{-3.7}$ &$7.5^{+2.3}_{-2.3}$ &$0.21^{+0.20}_{-0.10}$ &$440^{+180}_{-190}$ \\
+LVT151012$^\mathrm{a}$ & $15.1^{+1.4}_{-1.1}$ &$0.57^{+0.38}_{-0.37}$ &$23^{+18}_{-6}$ &$13^{+4}_{-5}$ &$0.03^{+0.31}_{-0.20}$ &$1020^{+500}_{-490}$\\
+GW151226$^\mathrm{a}$ & $8.88^{+0.33}_{-0.28}$ &$0.52^{+0.40}_{-0.29}$ &$14.2^{+8.3}_{-3.7}$ &$7.5^{+2.3}_{-2.3}$ &$0.21^{+0.20}_{-0.10}$ &$440^{+180}_{-190}$ \\
 GW170104\footnote{\citet{GW170104}} & $25.1^{+2.5}_{-3.9}$ &$0.62^{+0.32}_{-0.26}$ &$31.2^{+8.4}_{-6.0}$ &$19.4^{+5.3}_{-5.9}$ &$-0.12^{+0.21}_{-0.30}$ &$880^{+450}_{-390}$\\
 GW170608\footnote{\citet{GW170608}} & $7.9^{+0.2}_{-0.2}$ &$0.6^{+0.3}_{-0.4}$ &$12^{+7}_{-2}$ &$7^{+2}_{-2}$ &$0.07^{+0.23}_{-0.09}$ &$340^{+140}_{-140}$ \\
 GW170814\footnote{\citet{GW170814}} & $24.1^{+1.4}_{-1.1}$ & &$30.5^{+5.7}_{-3.0}$ &$25.3^{+2.8}_{-4.2}$ &$0.06^{+0.12}_{-0.12}$ & $540^{+130}_{-210}$ \\
@@ -201,7 +201,7 @@ The evolution of this system is sketched out in an van den Heuvel -- style diagr
 	\centering
 	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
 	\includegraphics[width=0.9\textwidth]{COMPAS.png}
-	\caption{\label{fig:COMPAS} A sketch of the possible evolutionary path of GW150914, following \citet{Stevenson:2017}.  The stars are born in a \todo{$Z=0.02 Z_\odot$} low-metallicity environment with an initial separation of $\sim 10$ AU.  The binary widens during non-conservative case B mass transfer from primary to secondary, but is hardened by two orders of magnitude as a result of dynamically unstable mass transfer from the expanding secondary onto the primary which has become a black hole.}
+	\caption{\label{fig:COMPAS} A sketch of the possible evolutionary path of GW150914, following \citet{Stevenson:2017}.  The stars are born in a $Z=0.05 Z_\odot$ low-metallicity environment with an initial separation of $\sim 10$ AU.  The binary widens during non-conservative case B mass transfer from primary to secondary, but is hardened by two orders of magnitude as a result of dynamically unstable mass transfer from the expanding secondary onto the primary which has become a black hole.}
 \end{figure}
 
 Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as the luminous blue variable phase \citep{Mennekens:2014} and its dependence on metallicity; the efficiency of stable mass transfer efficiency; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Repetto:2012,Mandel:2015kicks}; the possible contribution of double-core common envelopes when unstable mass transfer is initiated between two evolved stars; and the role of dynamically stable non-conservative mass transfer onto a lower-mass compact donor in achieving sufficient binary hardening  \citep{vandenHeuvel:2017,Neijssel:2018}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
@@ -275,9 +275,9 @@ Of course, there is a multitude of uncertain physics within a given model.  How 
 
 One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to parametrize the uncertain physics and predict the expected source rates and distributions under different models.  Early  efforts relied on a discrete set of a few models in the parameter space of population synthesis assumptions \citep{Dominik:2012,Stevenson:2015}.  Even with the low computational cost of population synthesis, it is not feasible to explore more than a few tens to a few hundred models, which is not sufficient to explore the full parameter space or consider the correlations between model parameters.  However, recent successes in building accurate and computationally efficient emulators over the model parameter space \citep{Barrett:2017} suggest that a full exploration of this space will soon be possible. \citet{Barrett:2017FIM} applied Fisher information matrix techniques to the space of model parameters and found that parameters such as mass loss rates during the Wolf-Rayet phase and common envelope energetics can be measured to the level of a few percent with a thousand detections. 
 
-More observational data sets will further aid in interpreting gravitational-wave observations.  Future missions raise the prospect of observing evolution of populations of merging binaries -- or event individual systems -- across a broad band of gravitational-wave frequencies, from the millihertz \citep[e.g.,[]{Sesana:2016} through the decihertz \citep{Mandel:2017} and hertz \citep{ET:2012} to the LIGO/Virgo band.  Although electromagnetic transients are not broadly expected to be associated with binary black hole mergers \citep[e.g.,][]{Lyutikov:2016}, any such observations would indicate the persistence of material around the merging binary \citep[e.g.,][]{deMinkKing:2017}.  \todo{More details -- brief summary of Lorentz center workshop?}
+More observational data sets will further aid in interpreting gravitational-wave observations.  Future missions raise the prospect of observing evolution of populations of merging binaries -- or event individual systems -- across a broad band of gravitational-wave frequencies, from the millihertz \citep[e.g.,][]{Sesana:2016} through the decihertz \citep{Mandel:2017} and hertz \citep{ET:2012} to the LIGO/Virgo band.  Although electromagnetic transients are not broadly expected to be associated with binary black hole mergers \citep[e.g.,][]{Lyutikov:2016}, any such observations would indicate the persistence of material around the merging binary \citep[e.g.,][]{deMinkKing:2017}.  %\todo{More details -- brief summary of Lorentz center workshop?}
 
-The most useful additional constraints, however, are likely to come from comparing other data sets with gravitational-wave observations and demanding that any evolutionary model must self-consistently explain all of the available data: gravitational-wave observations, X-ray binaries, Galactic neutron stars, gamma ray bursts, supernovae, luminous red novae, etc.   Incorporating these constraints will make it possible to resolve these degeneracies and build a concordance model of massive binary evolution.  \todo{Other possible gravitational-wave sources? More details / references on XRBs, LRN, etc.?}
+The most useful additional constraints, however, are likely to come from comparing other data sets with gravitational-wave observations and demanding that any evolutionary model must self-consistently explain all of the available data: gravitational-wave observations, X-ray binaries, Galactic neutron stars, gamma ray bursts, supernovae, luminous red novae, etc.   Incorporating these constraints will make it possible to resolve these degeneracies and build a concordance model of massive binary evolution.  %\todo{Other possible gravitational-wave sources? More details / references on XRBs, LRN, etc.?}
 
 The future of gravitational-wave astronomy holds the prospect of addressing the inverse problem of massive binary evolution: inferring the formation channels and their physics from observations of the merging compact-object binary population.  Like a paleontologist who uses her knowledge of anatomy to determine the appearance, eating habits, and even behaviour of extinct dinosaurs from their skeletal remnants, we can now use merging neutron stars and black holes ? remnants of massive stars ? to probe the behaviour of those stars, and particularly their evolution in binaries \citep{MandelFarmer:2017}.   With the data to come and the theoretical developments underway, this future is brightly chirping indeed!
 
