--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -19,6 +19,7 @@
 \newcommand\myshade{85}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
+\usepackage{tablefootnote}
 
  	
 \colorlet{mycitecolor}{Turquoise}
@@ -163,13 +164,13 @@ The short answer is that the masses themselves should not be surprising -- but p
 
 Compact object masses in double compact object binaries are set by the mass of the star before the collapse or supernova explosion at the end of stellar evolution and the physics of the collapse itself.  The compact object is unlikely to accrete a significant amount of mass after collapse: doubling its mass at the Eddington limit would take more than 100 million years, and the massive companion will only survive for a small fraction of that time.  The mass of the compact remnant is thus set by the pre-collapse mass of the stellar core: the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on up through iron.  Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}.  Thus, the mass of the stellar core determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a heavy star will end up in a carbon--oxygen core.  Since stars well in excess of 100 $M_\odot$ have been observed in the local Universe \citep[e.g.,][]{Schneider:2018}, perhaps the right question to ask is not why LIGO observed such heavy black holes, but why we haven't observed such heavy black holes before?  
 
-The answer has to do with the mass loss from massive stars.  The intense radiation from these stars -- they may have luminosities of order a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star.  Metals like iron, with their many absorption lines, are particularly efficient at capturing the radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity, is a key ingredient in determining stellar winds \citep{Vink:2001}.  Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the metallicity of our solar neighborhood (where roughly 2\% of the stellar matter by mass are metals -- elements heavier than hydrogen and helium, formed by earlier stellar generations rather than during the Big Bang), the maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}.  This matches the observations described in the previous section.  Thus, forming heavier black holes requires stellar progenitors born in regions with lower metallicity, that is, fewer preceding stellar generations.  This might either involve low-mass metal-poor galaxies, or formation in the very distant past with a long delay time between star formation and the relatively local black hole mergers \citep{Belczynski:2016}, but more on that below.
+The answer has to do with the mass loss from massive stars.  The intense radiation from these stars -- they may have luminosities of order a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star.  Metals like iron, with their many absorption lines, are particularly efficient at capturing the radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity, is a key ingredient in determining stellar winds \citep{Vink:2001}.  Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the metallicity of our solar neighborhood (where roughly 2\% of the stellar matter by mass are metals -- elements heavier than hydrogen and helium, formed by earlier stellar generations rather than during the Big Bang), the maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}.  This matches the observations described in the previous section.  Thus, forming heavier black holes requires stellar progenitors born in regions with lower metallicity, that is, fewer preceding stellar generations.  This might either involve low-mass metal-poor galaxies, or formation in the very distant past with a long delay time between star formation and the relatively local black hole mergers \citep{Belczynski:2016}, but more on that below.  Figure \ref{fig:BHremnant} illustrates this by showing the compact remnant (neutron star or black hole) mass as a function of the zero-age main sequence stellar mass as modeled with the COMPAS binary population synthesis code (see \url{http://www.sr.bham.ac.uk/COMPAS}).
 
 \begin{figure}
 	\centering
 	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
-	\includegraphics[width=0.7\textwidth]{BHremnant.png}
-	\caption{\label{fig:BHremnant} Remnant black hole mass for a given zero-age main sequence stellar mass in the absence of an interacting binary companion, following the default COMPAS prescription for winds and supernova \citep{Stevenson:2017} (courtesy of S.~Stevenson).  \todo{Toss out? If keep, update and cite in text.}}
+	\includegraphics[width=0.7\textwidth]{BHremnantdelayed.png}
+	\caption{\label{fig:BHremnant} Remnant compact object mass for a given zero-age main sequence stellar mass in the absence of an interacting binary companion, following the default COMPAS prescription for winds \citep{Stevenson:2017}  and the `delayed' supernova fallback prescription \citep{Fryer:2012}, at solar ($Z_\odot=0.02$) metallicity (blue) and a tenth solar (red).}
 \end{figure}
 %\todo{Include mass plots from Ben, or reuse Chris's old plot?, or attached?}
 
@@ -183,8 +184,8 @@ On the other hand, massive stars expand.  Even our Sun will reach the size of an
 	\centering
 	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
 	\includegraphics[width=0.45\textwidth]{M-rp.png}
-	\includegraphics[width=0.45\textwidth]{StellarExpansion.png}
-	\caption{Maximum initial periapsis separation that a binary black hole with equal-mass components (as given on the ordinate) can have to merge in the age of the Universe through gravitational-wave emission.	\label{fig:periapsis}  Right panel (courtesy of C.~Neijssel): maximal stellar extent during various phases of stellar evolution for a non-rotating star with a given initial mass. \label{fig:Rmax} Progenitors of binary black holes grow too large to fit into a binary that would merge through gravitational-wave radiation reaction without engaging in mass transfer first. \todo{Clean up right panel.  Metallicity?}}
+	\includegraphics[width=0.45\textwidth]{StellarRadiusZsolar.png}
+	\caption{Maximum initial periapsis separation that a binary black hole with equal-mass components (as given on the ordinate) can have to merge in the age of the Universe through gravitational-wave emission.	\label{fig:periapsis}  Right panel: maximal stellar extent at solar metallicity during various phases of stellar evolution for a non-rotating star with a given initial mass; based on the COMPAS implementation of single stellar evolution models of \citet{Hurley:2000}. \label{fig:Rmax} Progenitors of binary black holes grow too large to fit into a binary that would merge through gravitational-wave radiation reaction without engaging in mass transfer first.}
 \end{figure}
 
 %\todo{Update left panel of plot to show periapsis on horizontal axis.  Take max radial extent plot from Simon?}
