Fixing COMPAS URL.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -164,7 +164,7 @@ The short answer is that the masses themselves should not be surprising -- but p
 
 Compact object masses in double compact object binaries are set by the mass of the star before the collapse or supernova explosion at the end of stellar evolution and the physics of the collapse itself.  The compact object is unlikely to accrete a significant amount of mass after collapse: doubling its mass at the Eddington limit would take more than 100 million years, and the massive companion will only survive for a small fraction of that time.  The mass of the compact remnant is thus set by the pre-collapse mass of the stellar core: the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on up through iron.  Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}.  Thus, the mass of the stellar core determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a heavy star will end up in a carbon--oxygen core.  Since stars well in excess of 100 $M_\odot$ have been observed in the local Universe \citep[e.g.,][]{Schneider:2018}, perhaps the right question to ask is not why LIGO observed such heavy black holes, but why we haven't observed such heavy black holes before?  
 
-The answer has to do with the mass loss from massive stars.  The intense radiation from these stars -- they may have luminosities of order a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star.  Metals like iron, with their many absorption lines, are particularly efficient at capturing the radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity, is a key ingredient in determining stellar winds \citep{Vink:2001}.  Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the metallicity of our solar neighborhood (where roughly 2\% of the stellar matter by mass are metals -- elements heavier than hydrogen and helium, formed by earlier stellar generations rather than during the Big Bang), the maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}.  This matches the observations described in the previous section.  Thus, forming heavier black holes requires stellar progenitors born in regions with lower metallicity, that is, fewer preceding stellar generations.  This might either involve low-mass metal-poor galaxies, or formation in the very distant past with a long delay time between star formation and the relatively local black hole mergers \citep{Belczynski:2016}, but more on that below.  Figure \ref{fig:BHremnant} illustrates this by showing the compact remnant (neutron star or black hole) mass as a function of the zero-age main sequence stellar mass as modeled with the COMPAS binary population synthesis code (see \url{http://www.sr.bham.ac.uk/COMPAS}).
+The answer has to do with the mass loss from massive stars.  The intense radiation from these stars -- they may have luminosities of order a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star.  Metals like iron, with their many absorption lines, are particularly efficient at capturing the radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity, is a key ingredient in determining stellar winds \citep{Vink:2001}.  Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the metallicity of our solar neighborhood (where roughly 2\% of the stellar matter by mass are metals -- elements heavier than hydrogen and helium, formed by earlier stellar generations rather than during the Big Bang), the maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}.  This matches the observations described in the previous section.  Thus, forming heavier black holes requires stellar progenitors born in regions with lower metallicity, that is, fewer preceding stellar generations.  This might either involve low-mass metal-poor galaxies, or formation in the very distant past with a long delay time between star formation and the relatively local black hole mergers \citep{Belczynski:2016}, but more on that below.  Figure \ref{fig:BHremnant} illustrates this by showing the compact remnant (neutron star or black hole) mass as a function of the zero-age main sequence stellar mass as modeled with the COMPAS binary population synthesis code (see \url{http://www.sr.bham.ac.uk/compas}).
 
 \begin{figure}
 	\centering
