Added Coen to acks.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -284,7 +284,7 @@ The future of gravitational-wave astronomy holds the prospect of addressing the 
 
 
 \begin{acknowledgements}
-IM thanks all of the people who have guided him to understand stellar and binary evolution, foremost among them Selma de Mink.   The students who contributed to building COMPAS (Simon Stevenson, Alejandro Vigna G\'{o}mez, Coenraad Neijssel, Jim Barrett, Sebastian Gaebel) and external collaborators (including Stephen Justham and Philipp Podsiadlowski) deserve particular thanks.  Thanks also to Cole Miller, Vicky Kalogera, and Will Farr for stimulating discussions spanning many years.
+IM thanks all of the people who have guided him to understand stellar and binary evolution, foremost among them Selma de Mink.   The students who contributed to building COMPAS (Simon Stevenson, Alejandro Vigna G\'{o}mez, Coenraad Neijssel -- who deserves special thanks for assistance with figures \ref{fig:BHremnant} and \ref{fig:Rmax}, Jim Barrett, Sebastian Gaebel) and external collaborators (including Stephen Justham and Philipp Podsiadlowski) deserve particular thanks.  Thanks also to Cole Miller, Vicky Kalogera, and Will Farr for stimulating discussions spanning many years.
 \end{acknowledgements}
 
 \bibliographystyle{hapj}
