--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -87,9 +87,9 @@ LIGO and Virgo detectors has recently directly observed gravitational waves from
 
 \section{Introduction}
 
-Although invited to write a review about merging stellar-mass compact-object binaries as gravitational-wave sources, we have opted for the briefer, less formal style of a colloquium presentation.  On the one hand, some reviews on this topic have been written already in the excitement after the first detection \citep{GW150914} of gravitational waves by the Laser Interferometer Gravitational-wave Observatory (LIGO) \citep{GW150914:detectors}, including the astrophysical context companion paper by the the LIGO-Virgo scientific collaboration \citep{GW150914:astro} and the excellent review by \citet{Miller:2016}, and more are in the works.  On the other hand, it is somewhat premature to write a review of a field that is still very much in its infancy.  With just a few detections of gravitational waves from merging black holes  \citep{GW150914,GW151226,BBH:O1,GW170104,GW170608,GW170814} and one from merging neutron stars \citep{GW170817}, we are only beginning to explore the population of merging compact-object binaries.  We are not yet certain about the dominant formation channels for these sources or the astrophysical questions that we will be able to answer with these observations.
+The subject of merging stellar-mass binaries as gravitational-wave sources is perfectly suited to an informal colloquium presentation. Several formal reviews were written in the excitement following the first detection \citep{GW150914} of gravitational waves by the Laser Interferometer Gravitational-wave Observatory (LIGO) \citep{GW150914:detectors}, including the astrophysical context companion paper by the the LIGO-Virgo scientific collaboration \citep{GW150914:astro} and the excellent article by \citet{Miller:2016}. More reviews are certainly in the works. However, it is somewhat premature to formally review a field that is both rapidly evolving and very much in its infancy.  With just a few detections to date of gravitational waves from merging black holes \citep{GW150914,GW151226,BBH:O1,GW170104,GW170608,GW170814}, and one from merging neutron stars \citep{GW170817}, we are only beginning to explore the population of merging compact-object binaries.  We are not yet certain of the dominant formation channels for these sources, or even of the full range of astrophysical questions that gravitational-wave observations will answer. It is clear, however, that there are many important and exciting questions to explore.
 
-Therefore, we will take the liberty of an informal colloquium to focus on the questions that strike us as being most interesting and timely at the moment.  These will mostly be questions rather than answers.  The list is undoubtedly biased by our own interests.  Nor will we attempt to systematically survey all of the relevant available literature.  In other words, dear reader, consider yourself warned: this note is emphatically {\it not} a review.
+In this colloquium paper, we focus on the questions that strike us as being most interesting and timely at this stage of the field's development.  These will indeed mostly be questions rather than answers, and the list is undoubtedly biased by our own interests. Further, we do not attempt to systematically survey all of the relevant literature.  In other words, this is emphatically {\it not} a review.
 
 Below, we summarise the existing observations of merging binary black holes and closely related systems in section \ref{obs}, describe the plausible formation scenarios for binary black holes in \autoref{form}, discuss the predicted merger rates and merging object properties in \autoref{merge}, and speculate about the prospects for gravitational-wave astronomy in \autoref{prospect}.
 
